5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1594_820.log
== SUBMITION (2019-04-02 09:56:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- EXECUTION TIME:
0.237228
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:57:16) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.188554
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:57:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.138772
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:57:47) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.136589
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    valor // 50 = notas_R$50
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:58:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.183398
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    valor // 50 = notas_R50
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:58:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R50
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:59:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor =  50 //

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.137902
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    valor =  50 //
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:59:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor =  50 //

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    valor =  50 //
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:59:14) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    valor = notas_R50
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:59:45) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor = int(input())

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    valor = int(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:00:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor = int(input("x"))

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    valor = int(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:01:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valo = int(input("x"))

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valo % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    valo = int(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:01:14) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor = 100

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valo % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    valor = 100
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:01:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
a = 100

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = a % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    a = 100
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:05:33) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.168404
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor // 50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:05:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    notas_R50 = valor // 50
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:09:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notasR50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    notasR50 = valor // 50
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:11:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    notas_R50 = valor // 50
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:11:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.128862
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor // 50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:11:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = VALOR//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.157027
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = VALOR//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:11:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = VALOR//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    notas_R50 = VALOR//50
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:13:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    notas_R50 = valor // 50
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:14:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = (valor//50)

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    notas_R50 = (valor//50)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.186865
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.12846
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.162508
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.133899
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.135497
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.199396
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.32511
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.387308
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1594/820/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.471492
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.37714
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.477879
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1594/820/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.571008
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.537748
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.536136
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.478227
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.473205
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.384208
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    notas_R50 = valor//50
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.309119
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1594/820/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.23445
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1594/820/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:30:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
a = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
b = valor % 50

# Quantidade de notas de R$ 10
c = b // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = b % 10

# Quantidade de notas de R$ 2
e = d // 2

print(int(a))
print(int(c))
print(int(e))

-- EXECUTION TIME:
0.161442
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    a = valor//50
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:30:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
a = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
b = valor % 50

# Quantidade de notas de R$ 10
c = b // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = b % 10

# Quantidade de notas de R$ 2
e = d // 2

print(int(a))
print(int(c))
print(int(e))

-- EXECUTION TIME:
0.154149
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    a = valor//50
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:30:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
a = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
b = valor % 50

# Quantidade de notas de R$ 10
c = b // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = b % 10

# Quantidade de notas de R$ 2
e = d // 2

print(int(a))
print(int(c))
print(int(e))

-- EXECUTION TIME:
0.182814
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    a = valor//50
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:30:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
a = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
b = valor % 50

# Quantidade de notas de R$ 10
c = b // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = b % 10

# Quantidade de notas de R$ 2
e = d // 2

print(int(a))
print(int(c))
print(int(e))

-- EXECUTION TIME:
0.113589
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    a = valor//50
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:30:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
a = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
b = valor % 50

# Quantidade de notas de R$ 10
c = b // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = b % 10

# Quantidade de notas de R$ 2
e = c // 2

print(int(a))
print(int(c))
print(int(e))

-- EXECUTION TIME:
0.171409
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    a = valor//50
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:30:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
a = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
b = valor % 50

# Quantidade de notas de R$ 10
c = b // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = b % 10

# Quantidade de notas de R$ 2
e = b // 2

print(int(a))
print(int(c))
print(int(e))

-- EXECUTION TIME:
0.141659
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    a = valor//50
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:31:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
a = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
b = valor % 50

# Quantidade de notas de R$ 10
c = b // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = b % 10

# Quantidade de notas de R$ 2
e = d // 2

print(int(a))
print(int(c))
print(int(e))

-- EXECUTION TIME:
0.186051
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    a = valor//50
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:31:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
a = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
b = valor % 50

# Quantidade de notas de R$ 10
c = b // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = b % 10

# Quantidade de notas de R$ 2
e = d // 2

print(int(a))
print(int(c))
print(int(e))

-- EXECUTION TIME:
0.200825
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    a = valor//50
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:31:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
a = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
b = valor % 50

# Quantidade de notas de R$ 10
c = b // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = b % 10

# Quantidade de notas de R$ 2
e = d // 2

print(int(a))
print(int(c))
print(int(e))

-- EXECUTION TIME:
0.175659
-- ERROR:
  File "/home/codebench/codes/1594/820/main.py", line 8
    a = valor//50
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:31:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
a = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
b = valor % 50

# Quantidade de notas de R$ 10
c = b // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = b % 10

# Quantidade de notas de R$ 2
e = d // 2

print(int(a))
print(int(c))
print(int(e))

-- ERROR:
File "XXXX", line 8
    a = valor//50
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:32:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

u = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
a = u//50

# Valor restante a ser sacado com notas menores que R$ 50
b = valor % 50

# Quantidade de notas de R$ 10
c = b // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = b % 10

# Quantidade de notas de R$ 2
e = d // 2

print(int(a))
print(int(c))
print(int(e))

-- ERROR:
File "XXXX", line 8
    a = u//50
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:32:47) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

u = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
a = 50 // u

# Valor restante a ser sacado com notas menores que R$ 50
b = valor % 50

# Quantidade de notas de R$ 10
c = b // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = b % 10

# Quantidade de notas de R$ 2
e = d // 2

print(int(a))
print(int(c))
print(int(e))

-- ERROR:
File "XXXX", line 8
    a = 50 // u
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:33:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

u = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
a = 5+2

# Valor restante a ser sacado com notas menores que R$ 50
b = valor % 50

# Quantidade de notas de R$ 10
c = b // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = b % 10

# Quantidade de notas de R$ 2
e = d // 2

print(int(a))
print(int(c))
print(int(e))

-- ERROR:
File "XXXX", line 8
    a = 5+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:33:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

u = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
a = u//50

# Valor restante a ser sacado com notas menores que R$ 50
b = valor % 50

# Quantidade de notas de R$ 10
c = b // 10

# Valor restante a ser sacado com notas menores que R$ 50
d = b % 10

# Quantidade de notas de R$ 2
e = d // 2

print(int(a))
print(int(c))
print(int(e))

-- ERROR:
File "XXXX", line 8
    a = u//50
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:50:12) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = VALOR//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas_R50 = VALOR//50
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:50:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.15357
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/820/main.py", line 8, in <module>
    notas_R50 = valor//50
TypeError: unsupported operand type(s) for //: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:50:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas_R50 = valor//50
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:51:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.203962
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:22:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.155846
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
